--- a/movieDataApp/src/app/pages/auth/auth.page.html
+++ b/movieDataApp/src/app/pages/auth/auth.page.html
@@ -1,9 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>auth</ion-title>
+    <ion-title>Authorisation</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content padding>
+  <ion-button (click)="onLogin()">Login</ion-button>
 </ion-content>
