--- a/movieDataApp/src/app/pages/movies/movies.page.html
+++ b/movieDataApp/src/app/pages/movies/movies.page.html
@@ -1,9 +1,23 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>movies</ion-title>
+    <ion-title>Movies Search</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-searchbar [(ngModel)]="searchField" (ionChange)="searchChanged($event)"></ion-searchbar>
 
+  <ion-card button *ngFor="let item of (results | async)" [routerLink]="['/movies', item.imdbID]">
+    
+    <img [src]="item.Poster" *ngIf="item.Poster != 'N/A'">
+
+    <ion-card-header>
+      <ion-card-title>{{ item.Title }}</ion-card-title>
+      <ion-card-subtitle>{{ item.Year }}</ion-card-subtitle>
+
+    </ion-card-header>
+  
+  </ion-card>
+
+  
 </ion-content>
