--- a/movieDataApp/src/app/pages/movie-details/movie-details.page.html
+++ b/movieDataApp/src/app/pages/movie-details/movie-details.page.html
@@ -1,9 +1,47 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>movieDetails</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
+    <ion-title>{{ information?.Title }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
 
-</ion-content>
+  <ion-card *ngIf="information">
+    <ion-card-header>
+      <ion-card-title>
+        {{ information.Title }}
+      </ion-card-title>
+      <ion-card-subtitle>
+        {{ information.Year }}
+      </ion-card-subtitle>
+    </ion-card-header>
+      <ion-card-content text-center>
+        <img [src]="information.Poster" class="info-img">
+    
+        <ion-item lines="none">
+          <ion-icon name="star-half" slot="start"></ion-icon>
+          <ion-label>{{ information.imdbRating }}</ion-label>
+        </ion-item>
+    
+        <ion-item lines="none">
+          <h2 slot="start">Directed: </h2>
+          <ion-label text-wrap>{{ information.Director }}</ion-label>
+        </ion-item>
+    
+        <ion-item lines="none">
+          <h2 padding-right>Starring: </h2>
+          <ion-label text-wrap>{{ information.Actors }}</ion-label>
+        </ion-item>
+
+        <div class="ion-text-start">
+            {{ information.Plot }}
+        </div>
+        
+
+      </ion-card-content>
+    </ion-card>
+    
+  </ion-content>
