--- a/movieDataApp/src/app/app.component.html
+++ b/movieDataApp/src/app/app.component.html
@@ -1,3 +1,32 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu side="start">
+   
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>MY Movie App HAAH</ion-title>
+      </ion-toolbar>
+    </ion-header>
+
+    <ion-content>
+        <!-- Any thing could go here. List, paragraph, ..., div -->
+      <ion-list>
+        <ion-menu-toggle>
+          <ion-item line="none" routerLink="/movies">
+            <ion-icon name="business" slot="start"></ion-icon>
+            <ion-label>Movies Search</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+        <ion-menu-toggle>          
+          <ion-item line="none" (click)="onLogOut()" button>
+            <ion-icon name="exit" slot="end"></ion-icon>
+            <ion-label>LogOut</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+    
+      </ion-content>
+
+  </ion-menu>
+
+  <ion-router-outlet main></ion-router-outlet>
 </ion-app>
