--- a/movieDataApp/src/app/app.component.html
+++ b/movieDataApp/src/app/app.component.html
@@ -18,13 +18,13 @@
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle>          
-          <ion-item line="none" button>
+          <ion-item line="none" (click)='onClickDummyButton()' button>
             <ion-icon name="contact" slot="start"></ion-icon>
             <ion-label>Director Search</ion-label>
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle>          
-            <ion-item line="none" button>
+            <ion-item line="none" (click)='onClickDummyButton()'>
               <ion-icon name="book" slot="start"></ion-icon>
               <ion-label>Genre</ion-label>
             </ion-item>
