--- a/movieDataApp/src/app/pages/auth/auth.page.html
+++ b/movieDataApp/src/app/pages/auth/auth.page.html
@@ -1,9 +1,35 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Authorisation</ion-title>
+    <ion-title>{{ isLogin ? 'Log In' : 'Sign Up'}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-  <ion-button (click)="onLogin()">Login</ion-button>
+  <form #f="ngForm" (ngSubmit)="onSubmit(f)">
+    <ion-grid>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-list>
+            <ion-item>
+              <ion-label position="floating">Email</ion-label>
+              <ion-input type="email" ngModel name="email" required email #emailCtrl="ngModel"></ion-input>
+            </ion-item>
+            <ion-note *ngIf="!emailCtrl.valid && emailCtrl.touched">A valid email is required.</ion-note>
+            <ion-item>
+              <ion-label position="floating">Password</ion-label>
+              <ion-input ngModel name="password" type="password" required minlength="8" #passwordCtrl="ngModel"></ion-input>
+            </ion-item>
+            <ion-note *ngIf="!passwordCtrl.valid && passwordCtrl.touched">Password should contain at least 8 characters.</ion-note>
+          </ion-list>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-button type="button " (click)="onSwitchAuthMode()" fill="clear" expand="block">Switch to {{ isLogin ? 'Signup' : 'Login' }}</ion-button>
+          <ion-button type="submit" (click)="onLogin()" expand="block" [disabled]="!f.valid">Login</ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>
+  
 </ion-content>
